--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
+    "swiper": "^11.2.5",
     "vaul": "^1.1.2"
   },
   "devDependencies": {
